--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Push Docker Image
       run: |
-        docker push -t fel1pepx10/docker-graphql-test:0.0.2
+        docker push fel1pepx10/docker-graphql-test:0.0.2
 
       
     # - name: Build the Docker image
