--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,11 +27,13 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build -t fel1pepx10/docker-graphql-test:0.0.2 .
+        docker build -t fel1pepx10/docker-graphql-test:0.0.3 .
+        docker build -t fel1pepx10/docker-graphql-test:latest .
 
     - name: Push Docker Image
       run: |
-        docker push fel1pepx10/docker-graphql-test:0.0.2
+        docker push fel1pepx10/docker-graphql-test:0.0.3
+        docker push fel1pepx10/docker-graphql-test:latest
 
       
     # - name: Build the Docker image
