--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,22 +18,33 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v4.0.3
+      with:
+        major_pattern: "major:"
+        minor_pattern: "feat:"
+        format: "${major}.${minor}.${patch}-prerelease${increment}"
+      id: new_version
+            
+
     - name: Docker Login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        NEW_VERSION: ${{ steps.new_version.outputs.version }}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+        echo " $NEW_VERSION!!!!!!!!!!!!!!!!!!1"
 
-    - name: Build Docker Image
-      run: |
-        docker build -t fel1pepx10/docker-graphql-test:0.0.3 .
-        docker build -t fel1pepx10/docker-graphql-test:latest .
+    # - name: Build Docker Image
+    #   run: |
+    #     docker build -t fel1pepx10/docker-graphql-test:0.0.3 .
+    #     docker build -t fel1pepx10/docker-graphql-test:latest .
 
-    - name: Push Docker Image
-      run: |
-        docker push fel1pepx10/docker-graphql-test:0.0.3
-        docker push fel1pepx10/docker-graphql-test:latest
+    # - name: Push Docker Image
+    #   run: |
+    #     docker push fel1pepx10/docker-graphql-test:0.0.3
+    #     docker push fel1pepx10/docker-graphql-test:latest
 
       
     # - name: Build the Docker image
