--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,20 +31,22 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.new_version.outputs.version }}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo " $NEW_VERSION!!!!!!!!!!!!!!!!!!1"
 
-    # - name: Build Docker Image
-    #   run: |
-    #     docker build -t fel1pepx10/docker-graphql-test:0.0.3 .
-    #     docker build -t fel1pepx10/docker-graphql-test:latest .
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.new_version.outputs.version }}
+      run: |
+        docker build -t fel1pepx10/docker-graphql-test:$NEW_VERSION .
+        docker build -t fel1pepx10/docker-graphql-test:latest .
 
-    # - name: Push Docker Image
-    #   run: |
-    #     docker push fel1pepx10/docker-graphql-test:0.0.3
-    #     docker push fel1pepx10/docker-graphql-test:latest
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.new_version.outputs.version }}
+      run: |
+        docker push fel1pepx10/docker-graphql-test:$NEW_VERSION
+        docker push fel1pepx10/docker-graphql-test:latest
 
       
     # - name: Build the Docker image
